syntax = "proto3";
package pb;
option go_package = "internal/infra/pb";

message blank {}

message Order {
    string id = 1;
    string data = 2;
    repeated Item items = 3;
}

message Item {
    string orderId = 1;
    string id = 2;
    string description = 3;
    int32 qty = 4;
    double value = 5;

}

message CreateOrderRequest {
    string data = 1;
}

message OrderResponse {
    Order order = 1;
}

message OrderList {
    repeated Order orders = 1;
}

message OrderGetRequest {
    string id = 1;
}

message AddItemRequest {
    string orderId = 1;
    string description = 2;
    int32 qty = 3;
    double value = 4;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (Order) {}
    rpc CreateOrderStream(stream CreateOrderRequest) returns (OrderList) {}
    rpc CreateOrderStreamBidirectional(stream CreateOrderRequest) returns (stream Order) {}
    rpc ListOrders(blank) returns (OrderList) {}
    rpc GetOrder(OrderGetRequest) returns (Order) {}
    rpc AddItem(AddItemRequest) returns (Item) {}
}

//protoc --go_out=. --go-grpc_out=. internal/infra/proto/order_item.proto
//protoc --go_out=. --go-grpc_out=. internal/proto/order_item.proto
// protoc --go_out=. --go-grpc_out=. proto/order_item.proto

// evans --path ./proto --proto order_item.proto --port 50051
// evans repl --proto proto/order_item.proto --port 50051